Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -1547,3 +1547,13 @@
     month = "7",
     year = "2002"
 }
+@article{Ollitrault:1992bk,
+    author = "Ollitrault, Jean-Yves",
+    title = "{Anisotropy as a signature of transverse collective flow}",
+    reportNumber = "SACLAY-SPH-T-92-016",
+    doi = "10.1103/PhysRevD.46.229",
+    journal = "Phys. Rev. D",
+    volume = "46",
+    pages = "229--245",
+    year = "1992"
+}
