--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -3,13 +3,14 @@
 \section{Experimental setup}
 \label{sec:experiment}
 
-The analysis is performed with data samples in pp collisions at $\sqrt{s} = 13$~TeV collected from 2016 to 2018 and in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV in 2016 during the LHC Run 2 period. A full description of the ALICE detector and performance in the LHC Run 2 can be found in Refs~\cite{Aamodt:2008zz,Abelev:2014ffa}. The analysis utilizes the V0 detector~\cite{Abbas:2013taa}, the Inner Tracking System (ITS)~\cite{aliceITS}, and the Time Projection Chamber (TPC)~\cite{aliceTPC}. 
+The analysis is performed using data samples from pp collisions at $\sqrt{s} = 13$~TeV collected between 2016 and 2018, as well as from p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV in 2016 during the LHC Run 2 period. A full description of the ALICE detector and its performance during the LHC Run 2 can be found in Refs~\cite{Aamodt:2008zz, Abelev:2014ffa}. The analysis utilizes the V0 detector~\cite{Abbas:2013taa}, the Inner Tracking System (ITS)~\cite{aliceITS}, and the Time Projection Chamber (TPC)~\cite{aliceTPC}. 
 
-The V0 detector consists of two stations on both sides of the interaction point, V0A and V0C, each made of 32 plastic scintillator tiles, covering the full azimuthal angle within the pseudorapidity intervals $2.8 < \eta < 5.1$ and $-3.7 < \eta < -1.7$, respectively. The V0 provides a minimum-bias (MB) trigger in both pp and p--Pb collisions and an additional high-multiplicity trigger in pp collisions. The minimum bias trigger is obtained by a time coincidence of V0A and V0C signals. The charged particle multiplicity is determined based on the sum of the V0A and V0C signals, which is denoted as V0M. The high-multiplicity trigger requires the V0M signal to exceed five times the mean value measured in MB collisions, selecting the 0.1\% of MB events with the largest V0M multiplicity. The analyzed data samples of MB and high-multiplicity pp events at $\sqrt{s}=$~13 TeV correspond to integrated luminosities ($\mathcal{L}_\mathrm{int}$) of 19 nb$^{-1}$ and 11 pb$^{-1}$, respectively~\cite{ALICE-PUBLIC-2016-002}. In p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$ TeV, the number of events corresponding to $\mathcal{L}_\mathrm{int} = 3$ nb$^{-1}$ is used for the analysis. 
+The V0 detector consists of two stations on both sides of the interaction point, V0A and V0C, each made of 32 plastic scintillator tiles, covering the full azimuthal angle within the pseudorapidity intervals $2.8 < \eta < 5.1$ and $-3.7 < \eta < -1.7$, respectively. The V0 provides a minimum-bias (MB) trigger in both pp and p--Pb collisions and an additional high-multiplicity trigger in pp collisions. The MB trigger is obtained by a time coincidence of V0A and V0C signals. The charged particle multiplicity is determined based on the sum of the V0A and V0C signals, which is denoted as V0M. The high-multiplicity trigger requires the V0M signal to exceed five times the mean value measured in MB collisions, selecting the 0.1\% of MB events with the largest V0M multiplicity. The analyzed data samples of MB and high-multiplicity pp events at $\sqrt{s}=$~13 TeV correspond to integrated luminosities ($\mathcal{L}_\mathrm{int}$) of 19 nb$^{-1}$ and 11 pb$^{-1}$, respectively~\cite{ALICE-PUBLIC-2016-002}. In p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$ TeV, the number of events corresponding to $\mathcal{L}_\mathrm{int} = 3$ nb$^{-1}$ is used for the analysis. 
 
 The primary vertex positions are reconstructed from signals measured by the Silicon Pixel Detector (SPD)~\cite{Santoro2009:ALICESPD}, consisting of the two innermost layers of the ITS. The reconstructed primary vertices are required to be within 8 cm of the nominal interaction point along the beam direction. Pileup events are determined and rejected if the longitudinal displacement of the secondary vertex is greater than 0.8 cm in pp collisions. The probability of pileup events is estimated to be about 0.6\% for MB and high-multiplicity events in pp collisions. The pileup probability is estimated to be negligible in p--Pb collisions. 
 
-Charged-particle tracks are reconstructed using the combined information of the ITS and TPC in a uniform magnetic field of 0.5 T along the beam direction by the solenoid. The ITS is a silicon tracker with six layers of silicon sensors; the SPD consists of the two innermost layers, the next two layers are the SDD (Silicon Drift Detector), and the outermost layers are the SSD (Silicon Strip Detector). The ITS and TPC cover the entire azimuth range up to $|\eta|<1.4$ and 0.9, respectively, for detecting charged particles emitted within 8 cm from the nominal vertex position $z_\mathrm{vtx}=0$ along the beam direction. Charged particle tracking is performed with the ITS and TPC capable of reconstructing tracks down to transverse momentum ($\pt$) of 0.15 GeV/$c$ with an efficiency of about 65\% and the efficiency reaches 80\% for intermediate $\pt$, 1--5~GeV/$c$. The $\pt$ resolution is about 1\% (1\%) for primary charged particles with $\pt<$~1~GeV/$c$, linearly increasing to 6\% (10\%) at $\pt\sim$ 50~GeV/$c$ in pp (p--Pb) collisions~\cite{ALICE:2018vuu}. 
+Charged-particle tracks are reconstructed using the combined information of the ITS and TPC in a uniform magnetic field of 0.5 T along the beam direction by the solenoid. The ITS is a silicon tracker with six layers of silicon sensors. The SPD consists of the two innermost layers. The next two layers are the SDD (Silicon Drift Detector), and the outermost layers are the SSD (Silicon Strip Detector). 
+For charged particles emitted from a vertex located within $z_\mathrm{vtx}<8$ cm along the beam direction, the ITS and TPC provide pseudorapidity coverage of $|\eta|<1.4$ and 0.9, respectively. Both detectors have full coverage in azimuth. Charged particle tracking is performed with the ITS and TPC capable of reconstructing tracks down to transverse momentum ($\pt$) of 0.15 GeV/$c$ with an efficiency of about 65\% and the efficiency reaches 80\% for intermediate $\pt$, 1--5~GeV/$c$. The $\pt$ resolution is about 1\% (1\%) for primary charged particles with $\pt<$~1~GeV/$c$, linearly increasing to 6\% (10\%) at $\pt\sim$ 50~GeV/$c$ in pp (p--Pb) collisions~\cite{ALICE:2018vuu}. 
 
 The charged particle selection criteria are optimized to ensure a uniform efficiency over the sensitive TPC volume to mitigate the effects of small areas where some ITS layers are inactive in both collision systems. The selection consists of two classes of tracks. Those in the first class must have at least one hit in SPD. The tracks of the second class do not have any hits related to the SPD, and their origins are rather constrained to the primary vertex~\cite{ALICE:2012eyl}. 
 
@@ -63,7 +64,7 @@ As discussed in Refs.\cite{ATLAS:2015hzw,ATLAS:2016yzd}, the correlation functio
 \label{eq:narray}
 Y_{\rm{HM}}(\Delta\varphi) = G~(1 + 2v_{2,2}\cos(2\Delta\varphi) + 2v_{3,3}\cos(3\Delta\varphi)) + F~Y_{\rm{LM}}(\Delta\varphi),
 \end{eqnarray}
-where $Y_{\rm{LM}}(\Delta\varphi)$ is the low-multiplicity measurement and $Y_{\rm{HM}}(\Delta\varphi)$ is the higher multiplicity template relative to $Y_{\rm{LM}}(\Delta\varphi)$. G is the normalization factor for the Fourier component up to the third harmonic $v_{n,n}$. The scale factor $F$ corresponds to the relative away-side jet-like contribution with respect to the low-multiplicity template corresponding to the 60--100\% percentile~\cite{ALICE:2013tla,ALICE:2014mas}. 
+where $Y_{\rm{LM}}(\Delta\varphi)$ is the low-multiplicity measurement and $Y_{\rm{HM}}(\Delta\varphi)$ is the higher multiplicity template relative to $Y_{\rm{LM}}(\Delta\varphi)$. $G$ is the normalization factor for the Fourier component up to the third harmonic $v_{n,n}$. The scale factor $F$ corresponds to the relative away-side jet-like contribution with respect to the low-multiplicity template corresponding to the 60--100\% percentile~\cite{ALICE:2013tla,ALICE:2014mas}. 
 The fit determines the scale factor $F$, pedestal $G$, and $v_{n,n}$ and is performed in various high-multiplicity classes as well as in different $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ intervals. 
 %This method does not rely on the zero yield at minimum (ZYAM) hypothesis~\cite{Ajitanand:2005jj} to subtract an assumed flat combinatorial component from the low-multiplicity template as done previously in Refs.~\cite{ATLAS:2012cix,ATLAS:2014qaj}. 
 This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side originating from jet fragmentation, and that the jet shape remains unchanged in high-multiplicity events compared to low-multiplicity events. The first assumption is ensured using the selected low-multiplicity template. The second assumption, regarding the modification of jet shapes, was tested with projections of the near-side jet peaks on $\Delta\eta$, which do not show a significant dependence on their shape on multiplicity~\cite{LAKOMOV2017329}. However, the effect of the possible modification of the away-side jet yield on the results of the template fit are investigated by modifying the away-side shape by the observed modification between low- and high-multiplicity events. The effect on $v_2$ is found to be less than 1$\%$ within the uncertainty in pp and p--Pb collisions in the kinematic ranges of this analysis. As for $v_3$, the effect is about 3\% and 8$\%$ maximum in pp and p--Pb collisions, respectively (see Sec.~\ref{sec:uncertainties} for more discussion).
