Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -1557,3 +1557,9 @@
     pages = "229--245",
     year = "1992"
 }
+@article{ALICE-PUBLIC-2017-005,
+      collaboration = "ALICE",
+      title         = "{The ALICE definition of primary particles}",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2270008",
+}
