--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -10,9 +10,10 @@ The V0 detector consists of two stations on both sides of the interaction point,
 The primary vertex positions are reconstructed from signals measured by the Silicon Pixel Detector (SPD)~\cite{Santoro2009:ALICESPD}, consisting of the two innermost layers of the ITS. The reconstructed primary vertices are required to be within 8 cm of the nominal interaction point along the beam direction. Pileup events are determined and rejected if the longitudinal displacement of the secondary vertex is greater than 0.8 cm in pp collisions. The probability of pileup events is estimated to be about 0.6\% for MB and high-multiplicity events in pp collisions. The pileup probability is estimated to be negligible in p--Pb collisions. 
 
 Charged-particle tracks are reconstructed using the combined information of the ITS and TPC in a uniform magnetic field of 0.5 T along the beam direction by the solenoid. The ITS is a silicon tracker with six layers of silicon sensors. The SPD consists of the two innermost layers. The next two layers are the SDD (Silicon Drift Detector), and the outermost layers are the SSD (Silicon Strip Detector). 
-For charged particles emitted from a vertex located within $z_\mathrm{vtx}<8$ cm along the beam direction, the ITS and TPC provide pseudorapidity coverage of $|\eta|<1.4$ and 0.9, respectively. Both detectors have full coverage in azimuth. Charged particle tracking is performed with the ITS and TPC capable of reconstructing tracks down to transverse momentum ($\pt$) of 0.15 GeV/$c$ with an efficiency of about 65\% and the efficiency reaches 80\% for intermediate $\pt$, 1--5~GeV/$c$. The $\pt$ resolution is about 1\% (1\%) for primary charged particles with $\pt<$~1~GeV/$c$, linearly increasing to 6\% (10\%) at $\pt\sim$ 50~GeV/$c$ in pp (p--Pb) collisions~\cite{ALICE:2018vuu}. 
+For charged particles emitted from a vertex located within $z_\mathrm{vtx}<8$ cm along the beam direction, the ITS and TPC provide pseudorapidity coverage of $|\eta|<1.4$ and 0.9, respectively. Both detectors have full coverage in azimuth. 
+Charged particle tracking is performed using the ITS and TPC, which can reconstruct tracks down to a transverse momentum ($\pt$) of 0.15 GeV/$c$ with an efficiency of approximately 65\%. The efficiency increases to 80\% for intermediate $\pt$ values of 1--5~GeV/$c$. The $\pt$ resolution is approximately 1\% for primary charged particles~\cite{ALICE-PUBLIC-2017-005} with $\pt<$ 1~GeV/$c$, and it linearly increases to 6\% at $\pt\sim$ 50~GeV/$c$ in pp collisions and 10\% in p--Pb collisions~\cite{ALICE:2018vuu}.
 
-The charged particle selection criteria are optimized to ensure a uniform efficiency over the sensitive TPC volume to mitigate the effects of small areas where some ITS layers are inactive in both collision systems. The selection consists of two classes of tracks. Those in the first class must have at least one hit in SPD. The tracks of the second class do not have any hits related to the SPD, and their origins are rather constrained to the primary vertex~\cite{ALICE:2012eyl}. 
+The charged-particle-selection criteria are optimized to ensure a uniform efficiency over the sensitive TPC volume to mitigate the effects of small areas where some ITS layers are inactive in both collision systems. The selection consists of two classes of tracks. Those in the first class must have at least one hit in the SPD. Tracks of the second class do not have any hits in the SPD, but their origin is constrained to the primary vertex~\cite{ALICE:2012eyl}. 
 
 \section{Analysis procedure}
 \label{sec:ana}
@@ -23,37 +24,37 @@ Two-particle angular correlations are measured as functions of the relative azim
 \label{eq:corrfunction}
 \end{eqnarray}
 where the transverse momentum range for associated particles ($p_\mathrm{T,assoc}$) is $1<p_\mathrm{T,assoc}<4$~GeV/$c$ for different transverse momentum ranges of trigger particles ($p_\mathrm{T,trig}$).
-The $N_\mathrm{trig}$ and $N_\mathrm{pair}$ are the numbers of trigger particles and trigger-associated particle pairs, respectively. $S(\Delta\eta, \Delta\varphi)$ corresponds to the average number of pairs in the same event and $B(\Delta\eta, \Delta\varphi)$ to the number of pairs in mixed events. 
-$B (0,0)$ represents the normalization of $B(\Delta\eta, \Delta\varphi)$, and by dividing $S(\Delta\eta, \Delta\varphi)$ with $B(\Delta\eta, \Delta\varphi)/B (0,0)$ the acceptance effects are corrected for. The particles are corrected by weighting with the inverse of the tracking efficiency, obtained in the same way as in the previous study in Ref.~\cite{ALICE:2021nir}.
-%The tracking inefficiency is corrected for on the right-hand side of Eq.~\ref{eq:corrfunction} as functions of $p_\mathrm{T}$ and $\eta$. 
-In the previous study~\cite{ALICE:2021nir}, the tracking efficiency was calculated with a detector simulation with the PYTHIA 8 event generator and the GEANT3 transport code~\cite{Brun:1994aa}. The tracking efficiency is determined by re-weighting the primary particle composition based on a data-driven method~\cite{ALICE:2018hza,ALICE:2018vuu}. 
+The numbers of trigger particles and trigger-associated particle pairs are denoted as $N_\mathrm{trig}$ and $N_\mathrm{pair}$, respectively.
+The quantity $S(\Delta\eta, \Delta\varphi)$ represents the average number of pairs in the same event, while $B(\Delta\eta, \Delta\varphi)$ denotes the number of pairs in mixed events. The normalization of $B(\Delta\eta, \Delta\varphi)$ is represented by $B(0,0)$. To correct for acceptance effects, $S(\Delta\eta, \Delta\varphi)$ is divided by $B(\Delta\eta, \Delta\varphi)/B(0,0)$. The particles are weighted by the inverse of the tracking efficiency, which is obtained in the same way as in the previous study~\cite{ALICE:2021nir}. In that study, the tracking efficiency was calculated using a detector simulation with the PYTHIA 8 event generator and the GEANT3 transport code~\cite{Brun:1994aa}. To account for differences in particle composition between real data and PYTHIA, the tracking efficiency is determined by re-weighting the primary particle composition based on a data-driven method~\cite{ALICE:2018hza, ALICE:2018vuu}.
 %Therefore, this method improves the jet-yield extraction and has no impact on the flow extraction.
-The pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{vtx}$ interval, and the correlation functions are averaged over the vertex bins, resulting in the final per-trigger yield~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}. The lower limit of $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ ($>$~1~GeV/$c$) is chosen in order to avoid jet-like contributions which extend into the larger $\Delta\eta$ range for lower $p_\mathrm{T}$ particles because of the limited $\eta$ acceptance~\cite{ALICE:2021nir}. 
+The pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{\rm vtx}$ interval and the correlation functions are averaged over the vertex bins, resulting in the final per-trigger yield~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}. The lower limit of $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ ($>$~1~GeV/$c$) is chosen in order to avoid jet-like contributions from lower $p_\mathrm{T}$ particles which extend into the larger $\Delta\eta$ range because of the limited $\eta$ acceptance~\cite{ALICE:2021nir}. 
 
 \begin{figure}[h!]
 		\includegraphics[width=0.5 \textwidth]{figures/Fig1_ppHigh.pdf} 
 		\includegraphics[width=0.5 \textwidth]{figures/Fig1_ppLow.pdf} 
   		\includegraphics[width=0.5 \textwidth]{figures/Fig1_pPbHigh.pdf}
 		\includegraphics[width=0.5 \textwidth]{figures/Fig1_pPbLow.pdf}
-\caption{The two-dimensional correlation functions as functions of $\Delta\eta$ and $\Delta\varphi$ are shown for high-multiplicity (0--0.1\% or 0--5\%, on the left) and low-multiplicity (60--100\%, on the right) events in $\sqrt{s}=13$ TeV pp collisions (top) and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions (bottom). The intervals of $\pttrig$ and $\ptassoc$ are 1~$<\it{p}_{\rm{T,trig}}<$~2~GeV/$c$ and 1~$<\it{p}_{\rm{T,assoc}}<$~4~GeV/$c$, respectively, in all cases}
+\caption{The two-dimensional correlation functions as functions of $\Delta\eta$ and $\Delta\varphi$ are presented for high-multiplicity (0--0.1\% or 0--5\%, on the left) and low-multiplicity (60--100\%, on the right) events in $\sqrt{s}=13$ TeV pp collisions in the top panels. The corresponding distributions for $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions are shown in the bottom panels. The intervals of $\pttrig$ and $\ptassoc$ are 1~$<\it{p}_{\rm{T,trig}}<$~2~GeV/$c$ and 1~$<\it{p}_{\rm{T,assoc}}<$~4~GeV/$c$, respectively, in all cases}
 \label{fig:doubleridge}
 \end{figure}
 
-The two-dimensional correlation functions in pp collisions at $\sqrt{s}=13$ TeV are shown in the top panels in Fig.~\ref{fig:doubleridge} and p--Pb collisios at $\sqrt{s}=5.02$ TeV in the bottom panels. The left column shows the high-multiplicity (0--0.1\% for pp and 0--5\% for p--Pb) and low-multiplicity in the right column (60--100\% both for pp and p--Pb). The bottom panels show those in $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions. 
+The two-dimensional correlation functions from $pp$ collisions at $\sqrt{s}=13$ TeV are displayed in the top panels of Fig.~\ref{fig:doubleridge}, while those from $p$--Pb collisions at $\sqrt{s}=5.02$ TeV are presented in the bottom panels. The left column shows the high-multiplicity (0--0.1\% for $pp$ and 0--5\% for $p$--Pb) events, and the right column displays the low-multiplicity (60--100\% for both $pp$ and $p$--Pb) events.  
 %The multiplicity percentile of p--Pb collisions is wider as particle multiplicity, ranging from 0--5\%, compared to that of pp collisions.
 %The $z$-axis for the correlation yield is properly scaled in order to zoom in the larger $\Delta\eta$ region.
-The $z$-axis is scaled in order to resolve the structures in large $\Delta\eta$ regions.
-As a result, the jet peaks are sheared off in both figures. The flow modulation structure is clearly observed in the high-multiplicity collisions for both systems, while it is not seen in the low-multiplicity collisions. The away-side regions are populated mostly by back-to-back jet correlations. 
+The $z$-axis is scaled in order to resolve the ridge structures at large $\Delta\eta$ regions.
+As a result, the jet peaks are sheared off in all figures. The flow modulation structure is clearly observed to emerge in the high-multiplicity collisions for both systems, while it is not seen in the low-multiplicity collisions. The away-side regions are populated mostly by back-to-back jet correlations. 
 %but they are reduced and compatible with the one in the near side in $|\Delta\eta| > 1.6$.
 
+The per-trigger yield is determined by integrating the correlation function at large $\Delta\eta$ ($1.6<|\Delta\eta|<1.8$) to remove non-flow contributions from near-side jet fragments.
+The per-trigger yield as a function of $\Delta\varphi$ is expressed as:
 
-
-The per-trigger yield is extracted in multiplicity percentiles 0--0.1, 1--5, 5--20, 20--60, and 60--100\% in pp collisions (0--5, 5--10, 10--20, 20--40, 40--60, and 60--100\% in p--Pb collisions) as a function of $p_{\mathrm{T,trig}}/p_{\mathrm{T,assoc}}$ intervals at large $\Delta\eta$ ($1.6<|\Delta\eta|<1.8$) to remove the non-flow contributions from near-side jet fragments. The per-trigger yield as a function of $\Delta\varphi$ is expressed as
 \begin{eqnarray}
-Y(\Delta\varphi) = \frac{1}{N_{\rm{trig}}} \frac{ \rm{d}\it{}N_{\rm{pair}} }{ \rm{d}\Delta\varphi } = \int_{1.6<|\Delta \eta|<1.8} \left( \frac{1}{\it{N}_{\rm{trig}}} \frac{ \rm{d}\it{}^{2} N_{\rm{pair}} }{ \rm{d}\Delta\eta \rm{d}\Delta\varphi} \right) \dfrac{1}{\delta_{\Delta\eta}} \rm{d}\Delta \eta,
+Y(\Delta\varphi) = \frac{1}{N_{\rm{trig}}} \frac{\rm{d}N_{\rm{pair}}}{\rm{d}\Delta\varphi} = \int_{1.6<|\Delta \eta|<1.8} \left(\frac{1}{N_{\rm{trig}}} \frac{\rm{d}^{2}N_{\rm{pair}}}{\rm{d}\Delta\eta \rm{d}\Delta\varphi}\right) \frac{1}{\delta_{\Delta\eta}} \rm{d}\Delta \eta,
 \label{eq:pertrigger}
 \end{eqnarray}
-where the factor $\delta_{\Delta\eta}=$~0.4 is used as a normalization to obtain the per trigger yield per unit of pseudorapidity.
+
+where the factor $\delta_{\Delta\eta}=$~0.4 is used as a normalization to obtain the per-trigger yield per unit of pseudorapidity.
+The per-trigger yield is then extracted for multiple percentile ranges, including 0-0.1\%, 1-5\%, 5-20\%, 20-60\%, and 60-100\% in proton-proton (pp) collisions, and 0-5\%, 5-10\%, 10-20\%, 20-40\%, 40-60\%, and 60-100\% in proton-lead (p-Pb) collisions.  This is done as a function of $p_{\mathrm{T,trig}}/p_{\mathrm{T,assoc}}$ intervals.
 %The Zero-Yield-At-Minimum (ZYAM) procedure~\cite{Ajitanand:2005jj} is the method used to subtract the baseline of the correlation. 
 
 
@@ -64,10 +65,10 @@ As discussed in Refs.\cite{ATLAS:2015hzw,ATLAS:2016yzd}, the correlation functio
 \label{eq:narray}
 Y_{\rm{HM}}(\Delta\varphi) = G~(1 + 2v_{2,2}\cos(2\Delta\varphi) + 2v_{3,3}\cos(3\Delta\varphi)) + F~Y_{\rm{LM}}(\Delta\varphi),
 \end{eqnarray}
-where $Y_{\rm{LM}}(\Delta\varphi)$ is the low-multiplicity measurement and $Y_{\rm{HM}}(\Delta\varphi)$ is the higher multiplicity template relative to $Y_{\rm{LM}}(\Delta\varphi)$. $G$ is the normalization factor for the Fourier component up to the third harmonic $v_{n,n}$. The scale factor $F$ corresponds to the relative away-side jet-like contribution with respect to the low-multiplicity template corresponding to the 60--100\% percentile~\cite{ALICE:2013tla,ALICE:2014mas}. 
+where $Y_{\rm{LM}}(\Delta\varphi)$ is the measured per trigger yield from low-multiplicity events. The normalization factor for the first three Fourier terms, which parameterize the long-range, flow-like correlation, is denoted as $G$. The scale factor $F$ compensates for the increased yield of away-side-jet hadrons in a specific multiplicity bin, relative to the low-multiplicity template that corresponds to the 60-100\% percentile~\cite{ALICE:2013tla,ALICE:2014mas}.
 The fit determines the scale factor $F$, pedestal $G$, and $v_{n,n}$ and is performed in various high-multiplicity classes as well as in different $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ intervals. 
 %This method does not rely on the zero yield at minimum (ZYAM) hypothesis~\cite{Ajitanand:2005jj} to subtract an assumed flat combinatorial component from the low-multiplicity template as done previously in Refs.~\cite{ATLAS:2012cix,ATLAS:2014qaj}. 
-This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side originating from jet fragmentation, and that the jet shape remains unchanged in high-multiplicity events compared to low-multiplicity events. The first assumption is ensured using the selected low-multiplicity template. The second assumption, regarding the modification of jet shapes, was tested with projections of the near-side jet peaks on $\Delta\eta$, which do not show a significant dependence on their shape on multiplicity~\cite{LAKOMOV2017329}. However, the effect of the possible modification of the away-side jet yield on the results of the template fit are investigated by modifying the away-side shape by the observed modification between low- and high-multiplicity events. The effect on $v_2$ is found to be less than 1$\%$ within the uncertainty in pp and p--Pb collisions in the kinematic ranges of this analysis. As for $v_3$, the effect is about 3\% and 8$\%$ maximum in pp and p--Pb collisions, respectively (see Sec.~\ref{sec:uncertainties} for more discussion).
+This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side that would originate from jet fragmentation, and that the jet shape remains unchanged in high-multiplicity events compared to low-multiplicity events. The first assumption is ensured using the selected low-multiplicity template. The second assumption, which involves the modification of jet shapes, was tested by projecting the near-side jet peaks onto $\Delta\eta$. This projection did not reveal a significant dependence on multiplicity for the jet shape~\cite{LAKOMOV2017329}. However, the effect of the possible modification of the away-side jet yield on the results of the template fit was investigated by modifying the away-side shape by the observed modification between low- and high-multiplicity events. The effect on the extracted $v_2$ is found to be less than 1$\%$ in pp and p--Pb collisions in the kinematic ranges of this analysis. As for $v_3$, the effect is about 3\% and 8$\%$ maximum in pp and p--Pb collisions, respectively.  This modification of the shape is considered one of the sources of systematic uncertainty and will be discussed in Sec.~\ref{sec:uncertainties}.
 
 \begin{figure}[h!]
 	\centering
@@ -76,7 +77,7 @@ This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side 
 	\label{fig:flowext}
 \end{figure}
 
-Figure~\ref{fig:flowext} shows the template fit results for 0--0.1\% multiplicity percentile pp collisions at $\sqrt{s}$ = 13 TeV. The low-multiplicity yield,  $Y_{\rm{LM}}(\Delta\varphi)$, is shown in red squares, and the extracted $v_{2,2}$ and $v_{3,3}$ as orange and green respectively. The results on the scale factor $F$ in different multiplicity percentiles and systems are summarized in Tab.~\ref{tab:FpppPb}. In pp collisions, the $F$ is seen to slightly increase toward higher multiplicity collisions, with the value in the highest multiplicity bin being around 25\% larger than in the 20--60\% bin. Similar trend can be seen for the p--Pb collisions, although the multiplicity dependence is smaller. Between the corresponding centrality classes of pp and p--Pb collisions, $F$ from p--Pb collisions is found to be smaller, and closer to unity.
+Figure~\ref{fig:flowext} shows the template fit results for the 0--0.1\% multiplicity percentile in pp collisions at $\sqrt{s}$ = 13 TeV. The per-trigger yield for low multiplicity, $Y_{\rm{LM}}(\Delta\varphi)$, is represented by red squares. The values of $v_{2,2}$ and $v_{3,3}$ extracted from the fit are shown in orange and green, respectively. Values of the extracted scale factor $F$ in different multiplicity percentiles and systems are summarized in Tab.~\ref{tab:FpppPb}. In pp collisions, the value of $F$ is observed to slightly increase as the event multiplicity increases, with the highest multiplicity bin having a value approximately 25\% larger than the 20--60\% bin. A similar trend is observed for p--Pb collisions, though with a weaker dependence on multiplicity. Comparing the corresponding centrality classes of pp and p--Pb collisions, the value of $F$ in p--Pb collisions is found to be smaller and closer to unity.
 %Those are larger at high multiplicity in pp collisions, while they are closer to unity at low multiplicity in p--Pb collisions.
 This suggests that the jet fragmentation yield on the away-side increases with multiplicity, which is more pronounced in pp collisions. The difference between the two systems is likely explained by the true geometry driven centrality in p--Pb collisions, as opposed to the jet dominated bias in pp collisions.
  In previous ALICE results~\cite{ALICE:2012eyl,ALICE:2013snk}, it was assumed that the jet contribution is unchanged as a function of multiplicity (i.e. $F$ was assumed to be 1), which may lead to an underestimation of non-flow contamination in the final measurements of anisotropic flow. 
