Updates from Overleaf

--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -27,7 +27,7 @@ where the transverse momentum range for associated particles ($p_\mathrm{T,assoc
 The numbers of trigger particles and trigger-associated particle pairs are denoted as $N_\mathrm{trig}$ and $N_\mathrm{pair}$, respectively.
 The quantity $S(\Delta\eta, \Delta\varphi)$ represents the average number of pairs in the same event, while $B(\Delta\eta, \Delta\varphi)$ denotes the number of pairs in mixed events. The normalization of $B(\Delta\eta, \Delta\varphi)$ is represented by $B(0,0)$. To correct for acceptance effects, $S(\Delta\eta, \Delta\varphi)$ is divided by $B(\Delta\eta, \Delta\varphi)/B(0,0)$. The particles are weighted by the inverse of the tracking efficiency, which is obtained in the same way as in the previous study~\cite{ALICE:2021nir}. In that study, the tracking efficiency was calculated using a detector simulation with the PYTHIA 8 event generator and the GEANT3 transport code~\cite{Brun:1994aa}. To account for differences in particle composition between real data and PYTHIA, the tracking efficiency is determined by re-weighting the primary particle composition based on a data-driven method~\cite{ALICE:2018hza, ALICE:2018vuu}.
 %Therefore, this method improves the jet-yield extraction and has no impact on the flow extraction.
-The pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{\rm vtx}$ interval and the correlation functions are averaged over the vertex bins, resulting in the final per-trigger yield~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}. The lower limit of $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ ($>$~1~GeV/$c$) is chosen in order to avoid jet-like contributions from lower $p_\mathrm{T}$ particles which extend into the larger $\Delta\eta$ range because of the limited $\eta$ acceptance~\cite{ALICE:2021nir}. 
+The pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{\rm vtx}$ interval and the correlation functions are averaged over the vertex bins, resulting in the final per-trigger yield~\cite{Kopylov:1974th,Adam:2016tsv}. The lower limit of $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ ($>$~1~GeV/$c$) is chosen in order to avoid jet-like contributions from lower $p_\mathrm{T}$ particles which extend into the larger $\Delta\eta$ range because of the limited $\eta$ acceptance~\cite{ALICE:2021nir}. 
 
 \begin{figure}[h!]
 		\includegraphics[width=0.5 \textwidth]{figures/Fig1_ppHigh.pdf} 
@@ -68,7 +68,7 @@ Y_{\rm{HM}}(\Delta\varphi) = G~(1 + 2v_{2,2}\cos(2\Delta\varphi) + 2v_{3,3}\cos(
 where $Y_{\rm{LM}}(\Delta\varphi)$ is the measured per trigger yield from low-multiplicity events. The normalization factor for the first three Fourier terms, which parameterize the long-range, flow-like correlation, is denoted as $G$. The scale factor $F$ compensates for the increased yield of away-side-jet hadrons in a specific multiplicity bin, relative to the low-multiplicity template that corresponds to the 60-100\% percentile~\cite{ALICE:2013tla,ALICE:2014mas}.
 The fit determines the scale factor $F$, pedestal $G$, and $v_{n,n}$ and is performed in various high-multiplicity classes as well as in different $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ intervals. 
 %This method does not rely on the zero yield at minimum (ZYAM) hypothesis~\cite{Ajitanand:2005jj} to subtract an assumed flat combinatorial component from the low-multiplicity template as done previously in Refs.~\cite{ATLAS:2012cix,ATLAS:2014qaj}. 
-This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side that would originate from jet fragmentation, and that the jet shape remains unchanged in high-multiplicity events compared to low-multiplicity events. The first assumption is ensured using the selected low-multiplicity template. The second assumption, which involves the modification of jet shapes, was tested by projecting the near-side jet peaks onto $\Delta\eta$. This projection did not reveal a significant dependence on multiplicity for the jet shape~\cite{LAKOMOV2017329}. However, the effect of the possible modification of the away-side jet yield on the results of the template fit was investigated by modifying the away-side shape by the observed modification between low- and high-multiplicity events. The effect on the extracted $v_2$ is found to be less than 1$\%$ in pp and p--Pb collisions in the kinematic ranges of this analysis. As for $v_3$, the effect is about 3\% and 8$\%$ maximum in pp and p--Pb collisions, respectively.  This modification of the shape is considered one of the sources of systematic uncertainty and will be discussed in Sec.~\ref{sec:uncertainties}.
+This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side that would originate from jet fragmentation, and that the jet shape remains unchanged in high-multiplicity events compared to low-multiplicity events. The first assumption is ensured using the selected low-multiplicity template. The second assumption, which involves the modification of jet shapes, was tested by projecting the near-side jet peaks onto $\Delta\eta$. This projection did not reveal a strong dependence on multiplicity for the jet shape~\cite{LAKOMOV2017329}. However, the effect of the possible modification of the away-side jet yield on the result of the template fit was investigated by modifying the away-side shape by the observed modification between low- and high-multiplicity events. The effect on the extracted $v_2$ is found to be less than 1$\%$ in pp and p--Pb collisions in the kinematic ranges of this analysis. As for $v_3$, the effect is about 3\% and 8$\%$ maximum in pp and p--Pb collisions, respectively.  This modification of the shape is considered one of the sources of systematic uncertainty and will be discussed in Sec.~\ref{sec:uncertainties}.
 
 \begin{figure}[h!]
 	\centering
@@ -120,7 +120,7 @@ Y^\mathrm{near}_{\rm{frag}} = \int_{|\Delta \eta|<1.3} \left( \frac{1}{\it{N}_{\
 %As can be seen in Eq.~\ref{eq:Ynear}, the yield of the jet fragmentation is calculated by integrating the $\Delta\eta$ correlation over $|\Delta\eta|<1.3$ after applying the ZYAM procedure~\cite{Ajitanand:2005jj} because the flow coefficients have a weak dependence on $\eta$~\cite{ATLAS:2011ah,PHENIX:2018hho,ALICE:2016tlx}. The ZYAM procedure is applied by finding the minimum value of $\Delta\eta$ correlations within $|\Delta\eta|<1.3$, which results in pointing the minimum position to be $|\Delta\varphi|=1.3$.
 As flow has a weak $\eta$ dependence~\cite{ATLAS:2011ah,PHENIX:2018hho,ALICE:2016tlx}, the jet fragmentation yield can be calculated after the ZYAM background subtraction~\cite{Ajitanand:2005jj} by integrating the $\Delta\eta$ correlation over $|\Delta\eta|<1.3$, as written in Eq.~\ref{eq:Ynear}. The ZYAM procedure finds the minimum value of $\Delta\eta$ correlations within this range, which due to the shape of the correlation function is at $|\Delta\varphi|=1.3$.
 
-As can be seen in Eq.~\ref{eq:Ynear}, the per-trigger yield of away-side jet fragments is calculated by integrating the $\Delta\eta$ correlation over $|\Delta\eta|<1.3$ after applying the ZYAM procedure~\cite{Ajitanand:2005jj} because the flow coefficients have a weak dependence on $\eta$~\cite{ATLAS:2011ah,PHENIX:2018hho,ALICE:2016tlx}. The ZYAM procedure is applied by finding the minimum value of $\Delta\eta$ correlations within $|\Delta\eta|<1.3$, which results in pointing the minimum position to be $|\Delta\varphi|=1.3$.
+%As can be seen in Eq.~\ref{eq:Ynear}, the per-trigger yield of away-side jet fragments is calculated by integrating the $\Delta\eta$ correlation over $|\Delta\eta|<1.3$ after applying the ZYAM procedure~\cite{Ajitanand:2005jj} because the flow coefficients have a weak dependence on $\eta$~\cite{ATLAS:2011ah,PHENIX:2018hho,ALICE:2016tlx}. The ZYAM procedure is applied by finding the minimum value of $\Delta\eta$ correlations within $|\Delta\eta|<1.3$, which results in pointing the minimum position to be $|\Delta\varphi|=1.3$.
 
 The away-side jet-like yield in data is calculated from the low-multiplicity template fit method as $Y^{\rm{away, HM}}_{\mathrm{frag}} = Y^{\rm{away, LM}}_{\mathrm{frag}} \times F$, where $F$ is the parameter from Eq.~\ref{eq:narray}. The $Y^{\rm{away, LM}}_{\mathrm{frag}}$ is directly obtained by integrating the away-side low-multiplicity $\Delta\varphi$ correlation function in the low-multiplicity sample over $\pi/2 < \Delta\varphi < 3\pi/2$.
 It can be seen that while PYTHIA
@@ -163,7 +163,7 @@ This event scale was set by requiring a minimum $\pt$ of the leading track ($\pt
 \label{sec:uncertainties}
 
 \begin{table}[h!]
-\caption{The relative systematic uncertainties of $Y^{\rm{near}}$, $Y^{\rm{away,LM}}$, $F$, $v_{2}$, and $v_{3}$. Numbers given in ranges correspond to minimum and maximum uncertainties. ``negl." is assigned if the systematic deviation is contaminated by the statistical fluctuation. ``N.A" is assigned when the systematic variation is not relevant to the measurement. }
+\caption{The relative systematic uncertainties of $Y^{\rm{near}}$, $Y^{\rm{away,LM}}$, $F$, $v_{2}$, and $v_{3}$. The quoted ranges correspond to minimum and maximum uncertainties. Those uncertainties that are considered to be negligible are marked ``negl.". The systematic variations which are not relevant for the measurement are denoted as ``N.A".}
 \centering
 \label{tab:syst}
 \resizebox{\textwidth}{!} {
@@ -189,28 +189,27 @@ Total (in quadrature)& $\pm$2.5--6.1 & $\pm$5.0--5.5 & $\pm$1.8--7.1 & $\pm$1.3-
 }
 \end{table}
 
-The systematic uncertainties of $Y^{\rm{near}}$, $Y^{\rm{away,LM}}$, and $F$ are estimated by varying the analysis selection criteria and corrections in pp collisions, while the systematic uncertainties of $v_{2}$ and $v_{3}$ are estimated in pp and p--Pb collisions.
-The significance of each variation is determined using the Barlow test~\cite{Barlow:2002yb}. Variations greater than one $\sigma$ are considered significant according to this test and added to the quadratic sum for the total systematic uncertainties.
-All systematic uncertainties are summarized in Table~\ref{tab:syst}. 
+Systematic uncertainties are estimated by varying the analysis selection criteria and corrections. Independent systematic checks are performed, and the differences between measured values from each variation and the default selection are considered as the systematic uncertainty for each source. The total systematic uncertainty is obtained by adding the contributions from different sources in quadrature. A summary of all systematic uncertainties is provided in Table~\ref{tab:syst}. 
 
-The uncertainty associated to the selected range of the primary vertex is estimated by varying the accepted range from $|z_\mathrm{vtx}|<$~8~cm to $|z_\mathrm{vtx}|<$~6~cm. The variation of the range allows testing detector acceptance effects on the measurement. The estimated uncertainties of $Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$ are 0.2--0.5\% and 0.1\%, respectively. The uncertainties associated with the primary vertex selection are estimated to be 1.0--2.5\%, 0.2--1.8\%, and 1.4--3.9\% for $F$, $v_{2}$, and $v_{3}$, respectively. 
+The uncertainty attributed to the chosen primary vertex range was estimated by varying the accepted range from $|z_\mathrm{vtx}|<$~8~cm to $|z_\mathrm{vtx}|<$~6~cm. The variation of the range allows testing detector acceptance effects on the measurement. The estimated uncertainties of $Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$ are 0.2--0.5\% and 0.1\%, respectively. The uncertainties associated with the primary vertex selection were estimated to be 1.0--2.5\%, 0.2--1.8\%, and 1.4--3.9\% for $F$, $v_{2}$, and $v_{3}$, respectively. 
 
-Another source of systematic uncertainty is related to pileup rejection. Pileup events are rejected with different rejection criteria, such as the number of track contributors required for the reconstruction of pileup event vertices, where the number is changed from the default value of 3 to 5. The uncertainties of $Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$ are estimated to be 0.1--0.5\% and 0.2\%, respectively. The estimated uncertainties are negligible for $F$. The estimated uncertainties of $v_{2}$ and $v_{3}$ are 0.6\% and 1.4\%, respectively.
+Another source of systematic uncertainty is related to pileup rejection. Pileup events were rejected with different rejection criteria, such as the number of track contributors required for reconstruction of pileup event vertices, where the number is changed from the default value of 3 to 5. The uncertainties of $Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$ are estimated to be 0.1--0.5\% and 0.2\%, respectively. The estimated uncertainties are negligible for $F$. The estimated uncertainties of $v_{2}$ and $v_{3}$ are 0.6\% and 1.4\%, respectively.
 
-The systematic uncertainty from the track selection criteria is estimated by employing the other track selection criteria so called “global tracks”, which is described in Ref~\cite{ALICE:2021ptz}. The global track is required to have two hits in the ITS (at least one in the SPD) and at least 70 clusters in TPC. Due to inefficient parts of the SPD, the azimuthal distribution of global tracks is not uniform, which can be corrected within the azimuthal interval we defined, including different $p_{\mathrm{T}}$ inefficiency of this tracking. The systematic uncertainty from the different track selection criteria is  0.2--3.0\% for $v_{2}$ and  5.0--6.9\% for $v_{3}$. 
+The systematic uncertainty due to choice of track selection criteria was estimated by employing alternative track selection criteria so called “global track”, which are described in Ref~\cite{ALICE:2021ptz}. A global track is required to have two hits in the ITS (at least one in the SPD) and at least 70 clusters in the TPC. Due to inefficiencies in certain parts of the SPD, the azimuthal distribution of global tracks is not uniform. This can be corrected by using corresponding mixed events and accounting for the corresponding tracking efficiency, including the different $p_{\mathrm{T}}$ inefficiencies of this tracking. The systematic uncertainty from the different track selection criteria is  0.2--3.0\% for $v_{2}$ and  5.0--6.9\% for $v_{3}$. 
 
 
 An additional systematic uncertainty from the event-mixing is estimated by varying the interval of the primary vertex range, where events are mixed. The default value of 2~cm is changed to 1~cm. The resulting uncertainty of jet fragmentation yield ($Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$) is 0.2--0.7\%. The uncertainties of $F$, $v_{2}$, and $v_{3}$ are estimated to be 0.3--4.6\%.
 
-The systematic uncertainty from the low-multiplicity definition is estimated by changing the range of the low-multiplicity centrality percentile. There is no universal definition for the low-multiplicity, and the default range for the low-multiplicity in the present paper is set to 60--100\%, and changed to 70--100\%. The uncertainty of $Y^{\rm{away,LM}}$ is estimated to be 0.5--3.5\%. Note that the measurement of $Y^{\rm{near}}$ is irrelevant to the low-multiplicity definition, and the uncertainty is not estimated. The uncertainties of $F$, $v_{2}$, and $v_{3}$ are estimated to be 0.7--9.2\%.
+The systematic uncertainty associated with the low-multiplicity definition is estimated by changing the range of the low-V0M-multiplicity percentile. There is no universal definition for the low-multiplicity. The default range for the low-multiplicity in the present paper is set to 60--100\%, and changed to 70--100\%. The uncertainty of $Y^{\rm{away,LM}}$ is estimated to be 0.5--3.5\%. Note that for the measurement of $Y^{\rm{near}}$, the low-multiplicity definition is irrelevant and the corresponding uncertainty is not estimated. The uncertainties of $F$, $v_{2}$, and $v_{3}$ are estimated to be 0.7--9.2\%.
 
 The systematic uncertainty from matching the track reconstructed by the TPC and the corresponding signal in the ITS is estimated by evaluating the fraction of the mismatch between them. The estimated uncertainties of $Y^{\rm{near}}$ and $Y^{\rm{away,LM}}$ are 2.0--3.0\%.
 
 The systematic uncertainty from the efficiency correction for unidentified charged particles is estimated by comparing two correlation functions. One is constructed using true information in MC samples. The other is constructed using the reconstructed tracks, where reconstructed tracks are corrected for tracking efficiency. The estimated uncertainty is 0.1--5.0\%.
 
-Due to the limited $\eta$ acceptance of the TPC, non-flow contributions mainly originating from jet fragmentations affect the flow measurement. As the shape of short-range correlations mostly attributed to jets is getting broader with the decreasing $\pt$, the systematic uncertainty from $\eta$-acceptance significantly depends on the $p_{\rm{T}}$. To estimate the related uncertainty, the minimum $\Delta\eta$ gap is changed from 1.6 to 1.7 for constructing long-range $\Delta\varphi$ correlations.  The estimated uncertainties of $F$, $v_{2}$, and $v_{3}$ are 0.1--5.0\%.
+Due to the limited $\eta$ acceptance of the TPC, non-flow contributions, mainly originating from jet fragmentations, affect the flow measurement. As the shape of short-range correlations mostly attributed to jets is getting broader with the decreasing $\pt$, the systematic uncertainty from $\eta$-acceptance significantly depends on the $p_{\rm{T}}$. To estimate the related uncertainty, the minimum $\Delta\eta$ gap is changed from 1.6 to 1.7 for constructing the long-range $\Delta\varphi$ correlations.  The estimated uncertainties of $F$, $v_{2}$, and $v_{3}$ are 0.1--5.0\%.
 
-Finally, it is worth considering the possible impact of the multiplicity dependence of the jet shape modifications discussed in Section~\ref{sec:ana}. This is studied by examining the shape modification of the jet peak distribution in the near-side $\eta$. The observed change in width is used to estimate a possible effect on the distribution in $\phi$. The effect on $v_2$ is found to be less than 1$\%$ within the uncertainty in pp and p--Pb collisions for the kinematic ranges analyzed. For $v_3$, the effect is found to be a maximum of about 8$\%$ in p--Pb collisions. These values are included in the total systematic uncertainty. However, it is important to note that other analyses with different kinematic ranges should also perform a similar check on the systematics of this effect. It is possible that this effect may not always be the same as in our analysis.
+Finally, it is worth considering the possible impact of the multiplicity dependence of the jet shape modifications discussed in Section~\ref{sec:ana}. This is studied by examining the shape modification of the jet peak distribution in the near-side $\Delta\eta$ region as a function of  multiplicity. The observed change in width is used to estimate a possible effect on the distribution in $\varphi$. The effect on $v_2$ is found to be less than 1$\%$ in pp and p--Pb collisions for the kinematic ranges analyzed. For $v_3$, the effect is found to be no more than about 8$\%$ in p--Pb collisions. These values are included in the total systematic uncertainty. However, it is important to note that other analyses with different kinematic ranges should also perform a similar check on the systematics of this effect. It is possible that this effect may not always be as small as in our analysis.
+
 
 
 
