--- a/paper.bib
+++ b/paper.bib
@@ -18,7 +18,7 @@
 @article{ALICE:2014mas,
     author = "Abelev, Betty Bezverkhny and others",
     collaboration = "ALICE",
-    title = "{Multiplicity dependence of jet-like two-particle correlation structures in p\textendash{}Pb collisions at $\sqrt{s_{NN}}$=5.02 TeV}",
+    title = "{Multiplicity dependence of jet-like two-particle correlation structures in p\textendash{}Pb collisions at $\sqrt{s_{\rm NN}}$=5.02 TeV}",
     eprint = "1406.5463",
     archivePrefix = "arXiv",
     primaryClass = "nucl-ex",
@@ -115,7 +115,7 @@
 	slaccitation = {%%CITATION = ARXIV:1405.4632;%%}
 }
 @article{Abelev:2012di,
-	title        = {{Anisotropic flow of charged hadrons, pions and (anti-)protons measured at high transverse momentum in Pb-Pb collisions at $\sqrt{s_{NN}}$=2.76 TeV}},
+	title        = {{Anisotropic flow of charged hadrons, pions and (anti-)protons measured at high transverse momentum in Pb-Pb collisions at $\sqrt{s_{\rm NN}}$=2.76 TeV}},
 	author       = {Abelev, Betty and others},
 	year         = 2013,
 	journal      = {Phys. Lett.},
@@ -130,7 +130,7 @@
 	slaccitation = {%%CITATION = ARXIV:1205.5761;%%}
 }
 @article{ATLAS:2011ah,
-	title        = {{Measurement of the pseudorapidity and transverse momentum dependence of the elliptic flow of charged particles in lead-lead collisions at $\sqrt{s_{NN}}=2.76$ TeV with the ATLAS detector}},
+	title        = {{Measurement of the pseudorapidity and transverse momentum dependence of the elliptic flow of charged particles in lead-lead collisions at $\sqrt{s_{\rm NN}}=2.76$ TeV with the ATLAS detector}},
 	author       = {Aad, Georges and others},
 	year         = 2012,
 	journal      = {Phys. Lett. B},
@@ -290,7 +290,7 @@
 	reportnumber = {CERN-EP-2019-287}
 }
 @article{ALICE:2021klf,
-	title        = {{Multiharmonic Correlations of Different Flow Amplitudes in Pb-Pb Collisions at $\sqrt{s_{_{NN}}}=2.76$\,\,TeV}},
+	title        = {{Multiharmonic Correlations of Different Flow Amplitudes in Pb-Pb Collisions at $\sqrt{s_{_{\rm NN}}}=2.76$\,\,TeV}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2021,
 	journal      = {Phys. Rev. Lett.},
@@ -305,7 +305,7 @@
 	reportnumber = {CERN-EP-2021-005}
 }
 @article{ALICE:2021adw,
-	title        = {{Measurements of mixed harmonic cumulants in Pb\textendash{}Pb collisions at $\sqrt {s_{NN}}$ = 5.02 TeV}},
+	title        = {{Measurements of mixed harmonic cumulants in Pb\textendash{}Pb collisions at $\sqrt {s_{\rm NN}}$ = 5.02 TeV}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2021,
 	journal      = {Phys. Lett. B},
@@ -373,7 +373,7 @@
 	reportnumber = {CERN-EP-2019-033}
 }
 @article{Khachatryan:2016ibd,
-	title        = {{Pseudorapidity dependence of long-range two-particle correlations in $p$Pb collisions at $\sqrt {s_{NN}}=$ 5.02 TeV}},
+	title        = {{Pseudorapidity dependence of long-range two-particle correlations in $p$Pb collisions at $\sqrt {s_{\rm NN}}=$ 5.02 TeV}},
 	author       = {Khachatryan, Vardan and others},
 	year         = 2017,
 	journal      = {Phys. Rev. C},
@@ -535,7 +535,7 @@
 	reportnumber = {CERN-EP-2016-052, ALICE-PUBLIC-2016-001}
 }
 @article{Acharya:2017okq,
-	title        = {{Constraints on jet quenching in p-Pb collisions at $\mathbf{\sqrt{s_{NN}}}$ = 5.02 TeV measured by the event-activity dependence of semi-inclusive hadron-jet distributions}},
+	title        = {{Constraints on jet quenching in p-Pb collisions at $\mathbf{\sqrt{s_{\rm NN}}}$ = 5.02 TeV measured by the event-activity dependence of semi-inclusive hadron-jet distributions}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2018,
 	journal      = {Phys. Lett. B},
@@ -750,11 +750,13 @@
 	primaryclass = {nucl-ex},
 	slaccitation = {%%CITATION = NUCL-EX/0501025;%%}
 }
+
 @article{ALICE-PUBLIC-2016-002,
-	title        = {{ALICE luminosity determination for pp collisions at $\sqrt{s}=13$ TeV}},
-	year         = 2016,
-	collaboration = {ALICE},
-	reportnumber = {ALICE-PUBLIC-2016-002}
+      collaboration = "ALICE",
+      title         = "{ALICE luminosity determination for pp collisions at
+                       $\sqrt{s}=13$ TeV}",
+      year          = "2016",
+      url           = "https://cds.cern.ch/record/2160174",
 }
 @article{Santoro2009:ALICESPD,
 	title        = {{The ALICE Silicon Pixel Detector: Readiness for the first proton beam}},
@@ -834,18 +836,17 @@
 	primaryclass = {nucl-ex},
 	reportnumber = {CERN-EP-2016-229}
 }
-@article{KOPYLOV1974472:evtmixing,
-	title        = {Like particle correlations as a tool to study the multiple production mechanism},
-	author       = {G.I. Kopylov},
-	year         = 1974,
-	journal      = {Physics Letters B},
-	volume       = 50,
-	number       = 4,
-	pages        = {472--474},
-	doi          = {https://doi.org/10.1016/0370-2693(74)90263-9},
-	issn         = {0370-2693},
-	url          = {http://www.sciencedirect.com/science/article/pii/0370269374902639}
+@article{Kopylov:1974th,
+    author = "Kopylov, G. I.",
+    editor = "Weiner, R. M.",
+    title = "{Like particle correlations as a tool to study the multiple production mechanism}",
+    doi = "10.1016/0370-2693(74)90263-9",
+    journal = "Phys. Lett. B",
+    volume = "50",
+    pages = "472--474",
+    year = "1974"
 }
+
 @article{Gyulassy:1990ye,
 	title        = {{Jet Quenching in Dense Matter}},
 	author       = {Gyulassy, Miklos and Plumer, Michael},
@@ -937,7 +938,7 @@
 	reportnumber = {CERN-EP-2016-200}
 }
 @article{ALICE:2012eyl,
-	title        = {{Long-range angular correlations on the near and away side in $p$-Pb collisions at $\sqrt{s_{NN}}=5.02$ TeV}},
+	title        = {{Long-range angular correlations on the near and away side in $p$-Pb collisions at $\sqrt{s_{\rm NN}}=5.02$ TeV}},
 	author       = {Abelev, Betty and others},
 	year         = 2013,
 	journal      = {Phys. Lett. B},
@@ -1117,7 +1118,7 @@
 	reportnumber = {CMS-FSQ-12-022, CERN-PH-EP-2013-195}
 }
 @article{ATLAS:2012cix,
-	title        = {{Observation of Associated Near-Side and Away-Side Long-Range Correlations in $\sqrt{s_{NN}}$=5.02  TeV Proton-Lead Collisions with the ATLAS Detector}},
+	title        = {{Observation of Associated Near-Side and Away-Side Long-Range Correlations in $\sqrt{s_{\rm NN}}$=5.02  TeV Proton-Lead Collisions with the ATLAS Detector}},
 	author       = {Aad, Georges and others},
 	year         = 2013,
 	journal      = {Phys. Rev. Lett.},
@@ -1132,7 +1133,7 @@
 	reportnumber = {CERN-PH-EP-2012-366}
 }
 @article{ATLAS:2014qaj,
-	title        = {{Measurement of long-range pseudorapidity correlations and azimuthal harmonics in $\sqrt{s_{NN}}=5.02$ TeV proton-lead collisions with the ATLAS detector}},
+	title        = {{Measurement of long-range pseudorapidity correlations and azimuthal harmonics in $\sqrt{s_{\rm NN}}=5.02$ TeV proton-lead collisions with the ATLAS detector}},
 	author       = {Aad, Georges and others},
 	year         = 2014,
 	journal      = {Phys. Rev. C},
@@ -1316,7 +1317,7 @@
 	reportnumber = {INT-PUB-10-031}
 }
 @article{ALICE:2013mez,
-	title        = {{Centrality dependence of $\pi$, K, p production in Pb-Pb collisions at $\sqrt{s_{NN}}$ = 2.76 TeV}},
+	title        = {{Centrality dependence of $\pi$, K, p production in Pb-Pb collisions at $\sqrt{s_{\rm NN}}$ = 2.76 TeV}},
 	author       = {Abelev, Betty and others},
 	year         = 2013,
 	journal      = {Phys. Rev. C},
@@ -1330,7 +1331,7 @@
 	reportnumber = {CERN-PH-EP-2013-019}
 }
 @article{ALICE:2011ab,
-	title        = {{Higher harmonic anisotropic flow measurements of charged particles in Pb-Pb collisions at $\sqrt{s_{NN}}$=2.76 TeV}},
+	title        = {{Higher harmonic anisotropic flow measurements of charged particles in Pb-Pb collisions at $\sqrt{s_{\rm NN}}$=2.76 TeV}},
 	author       = {Aamodt, K. and others},
 	year         = 2011,
 	journal      = {Phys. Rev. Lett.},
@@ -1344,7 +1345,7 @@
 	reportnumber = {CERN-PH-EP-2011-073}
 }
 @article{OrjuelaKoop:2015jss,
-	title        = {{Azimuthal anisotropy relative to the participant plane from a multiphase transport model in central p + Au , d + Au , and $^{3}$He + Au collisions at $\sqrt{s_{NN}}=200$ GeV}},
+	title        = {{Azimuthal anisotropy relative to the participant plane from a multiphase transport model in central p + Au , d + Au , and $^{3}$He + Au collisions at $\sqrt{s_{\rm NN}}=200$ GeV}},
 	author       = {Orjuela Koop, J. D. and Adare, A. and McGlinchey, D. and Nagle, J. L.},
 	year         = 2015,
 	journal      = {Phys. Rev. C},
@@ -1469,7 +1470,7 @@
 @article{PHENIX:2018hho,
     author = "Adare, A. and others",
     collaboration = "PHENIX",
-    title = "{Pseudorapidity Dependence of Particle Production and Elliptic Flow in Asymmetric Nuclear Collisions of $p+$Al, $p+$Au, $d+$Au, and $^{3}$He$+$Au at $\sqrt{s_{_{NN}}}=200$ GeV}",
+    title = "{Pseudorapidity Dependence of Particle Production and Elliptic Flow in Asymmetric Nuclear Collisions of $p+$Al, $p+$Au, $d+$Au, and $^{3}$He$+$Au at $\sqrt{s_{_{\rm NN}}}=200$ GeV}",
     eprint = "1807.11928",
     archivePrefix = "arXiv",
     primaryClass = "nucl-ex",
