Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -966,7 +966,7 @@
 	reportnumber = {CERN-PH-EP-2013-115}
 }
 @article{ALICE:2018yph,
-	title        = {{Anisotropic flow of identified particles in Pb-Pb collisions at $ {\sqrt{s}}_{\mathrm{NN}}=5.02 $ TeV}},
+	title        = {{Anisotropic flow of identified particles in Pb-Pb collisions at $\sqrt{s_{\rm NN}}$=5.02 TeV}},
 	author       = {Acharya, S. and others},
 	year         = 2018,
 	journal      = {JHEP},
