Updates from Overleaf

--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -34,7 +34,7 @@ The pairs in mixed events are required to have primary vertices within the same 
 		\includegraphics[width=0.5 \textwidth]{figures/Fig1_ppLow.pdf} 
   		\includegraphics[width=0.5 \textwidth]{figures/Fig1_pPbHigh.pdf}
 		\includegraphics[width=0.5 \textwidth]{figures/Fig1_pPbLow.pdf}
-\caption{The two-dimensional correlation functions as functions of $\Delta\eta$ and $\Delta\varphi$ are presented for high-multiplicity (0--0.1\% or 0--5\%, on the left) and low-multiplicity (60--100\%, on the right) events in $\sqrt{s}=13$ TeV pp collisions in the top panels. The corresponding distributions for $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions are shown in the bottom panels. The intervals of $\pttrig$ and $\ptassoc$ are 1~$<\it{p}_{\rm{T,trig}}<$~2~GeV/$c$ and 1~$<\it{p}_{\rm{T,assoc}}<$~4~GeV/$c$, respectively, in all cases}
+\caption{Two-dimensional correlation functions are presented for high-multiplicity (0--0.1\% or 0--5\%, on the left) and low-multiplicity (60--100\%, on the right) events in $\sqrt{s}=13$ TeV pp collisions in the top panels. The corresponding distributions for $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions are shown in the bottom panels. All correlation functions are shown for 1~$<\it{p}_{\rm{T,trig}}<$~2~GeV/$c$ and 1~$<\it{p}_{\rm{T,assoc}}<$~4~GeV/$c$, respectively, in all cases.}
 \label{fig:doubleridge}
 \end{figure}
 
@@ -64,6 +64,7 @@ As discussed in Refs.\cite{ATLAS:2015hzw,ATLAS:2016yzd}, the correlation functio
 \begin{eqnarray}
 \label{eq:narray}
 Y_{\rm{HM}}(\Delta\varphi) = G~(1 + 2v_{2,2}\cos(2\Delta\varphi) + 2v_{3,3}\cos(3\Delta\varphi)) + F~Y_{\rm{LM}}(\Delta\varphi),
+\label{eq:tmpfit}
 \end{eqnarray}
 where $Y_{\rm{LM}}(\Delta\varphi)$ is the measured per trigger yield from low-multiplicity events. The normalization factor for the first three Fourier terms, which parameterize the long-range, flow-like correlation, is denoted as $G$. The scale factor $F$ compensates for the increased yield of away-side-jet hadrons in a specific multiplicity bin, relative to the low-multiplicity template that corresponds to the 60-100\% percentile~\cite{ALICE:2013tla,ALICE:2014mas}.
 The fit determines the scale factor $F$, pedestal $G$, and $v_{n,n}$ and is performed in various high-multiplicity classes as well as in different $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ intervals. 
@@ -73,7 +74,7 @@ This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side 
 \begin{figure}[h!]
 	\centering
 	\hspace{-3em}\includegraphics[width=0.6\textwidth]{figures/Fig1_FlowExt.pdf} 
-	\caption{The template fit results with the low-multiplicity templates. The black markers show the signal for the 0--0.1\% multiplicity percentile and its fit as a blue band. The red squares correspond to the low-multiplicity signal. The orange and green curves correspond to the extracted $v_{2,2}$ and $v_{3,3}$ signals, respectively. The fit to the signal is shown as a blue band, and the signal-to-fit ratio is shown in the bottom panel. The $\chi^{2}$ divided by the number of degrees of freedom is 0.894}
+	\caption{Per-trigger yield in $1.6<|\Delta\eta|<1.8$ extracted from 0--0.1\% and 60--100\% multiplicity percentile events in $\sqrt{s}=13$ TeV pp collisions. The data are fitted with the template fit method described by Eq.~\ref{eq:tmpfit}. The black markers show the signal for the 0--0.1\% multiplicity percentile and its fit as a blue band. The red squares correspond to the low-multiplicity signal. The orange and green curves correspond to the extracted $v_{2,2}$ and $v_{3,3}$ signals, respectively. The fit to the signal is shown as a blue band, and the signal-to-fit ratio is shown in the bottom panel. The $\chi^{2}$ divided by the number of degrees of freedom is 0.894.}
 	\label{fig:flowext}
 \end{figure}
 
