Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -858,7 +858,7 @@
 	reportnumber = {LBL-28531}
 }
 @article{Wang:1991xy,
-	title        = {{Gluon shadowing and jet quenching in A + A collisions at s**(1/2) = 200-GeV}},
+	title        = {{Gluon shadowing and jet quenching in A + A collisions at $\sqrt{s_{\rm NN}}=200$ GeV}},
 	author       = {Wang, Xin-Nian and Gyulassy, Miklos},
 	year         = 1992,
 	journal      = {Phys. Rev. Lett.},
