--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -30,10 +30,10 @@ The quantity $S(\Delta\eta, \Delta\varphi)$ represents the average number of pai
 The pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{\rm vtx}$ interval and the correlation functions are averaged over the vertex bins, resulting in the final per-trigger yield~\cite{Kopylov:1974th,Adam:2016tsv}. The lower limit of $p_\mathrm{T,trig}$ and $p_\mathrm{T,assoc}$ ($>$~1~GeV/$c$) is chosen in order to avoid jet-like contributions from lower $p_\mathrm{T}$ particles which extend into the larger $\Delta\eta$ range because of the limited $\eta$ acceptance~\cite{ALICE:2021nir}. 
 
 \begin{figure}[h!]
-		\includegraphics[width=0.5 \textwidth]{figures/Fig1_ppHigh.pdf} 
-		\includegraphics[width=0.5 \textwidth]{figures/Fig1_ppLow.pdf} 
-  		\includegraphics[width=0.5 \textwidth]{figures/Fig1_pPbHigh.pdf}
-		\includegraphics[width=0.5 \textwidth]{figures/Fig1_pPbLow.pdf}
+		\includegraphics[width=0.5 \textwidth]{figures/FIG1_ppHigh.pdf} 
+		\includegraphics[width=0.5 \textwidth]{figures/FIG1_ppLow.pdf} 
+  		\includegraphics[width=0.5 \textwidth]{figures/FIG1_pPbHigh.pdf}
+		\includegraphics[width=0.5 \textwidth]{figures/FIG1_pPbLow.pdf}
 \caption{Two-dimensional correlation functions are presented for high-multiplicity (0--0.1\% or 0--5\%, on the left) and low-multiplicity (60--100\%, on the right) events in $\sqrt{s}=13$ TeV pp collisions in the top panels. The corresponding distributions for $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb collisions are shown in the bottom panels. All correlation functions are shown for 1~$<\it{p}_{\rm{T,trig}}<$~2~GeV/$c$ and 1~$<\it{p}_{\rm{T,assoc}}<$~4~GeV/$c$, respectively, in all cases.}
 \label{fig:doubleridge}
 \end{figure}
@@ -73,8 +73,8 @@ This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side 
 
 \begin{figure}[h!]
 	\centering
-	\hspace{-3em}\includegraphics[width=0.6\textwidth]{figures/Fig1_FlowExt.pdf} 
-	\caption{Per-trigger yield in $1.6<|\Delta\eta|<1.8$ extracted from 0--0.1\% and 60--100\% multiplicity percentile events in $\sqrt{s}=13$ TeV pp collisions. The data are fitted with the template fit method described by Eq.~\ref{eq:tmpfit}. The black markers show the signal for the 0--0.1\% multiplicity percentile and its fit as a blue band. The red squares correspond to the low-multiplicity signal. The orange and green curves correspond to the extracted $v_{2,2}$ and $v_{3,3}$ signals, respectively. The fit to the signal is shown as a blue band, and the signal-to-fit ratio is shown in the bottom panel. The $\chi^{2}$ divided by the number of degrees of freedom is 0.894.}
+	\hspace{-3em}\includegraphics[width=0.6\textwidth]{figures/FIG2_FlowExt.pdf} 
+	\caption{Per-trigger yield in $1.6<|\Delta\eta|<1.8$ extracted from 0--0.1\% and 60--100\% multiplicity percentile events in $\sqrt{s}=13$ TeV pp collisions. The data are fitted with the template fit method described by Eq.~\ref{eq:tmpfit}. The black markers show the signal for the 0--0.1\% multiplicity percentile and its fit as a blue band. The red squares correspond to the low-multiplicity signal. The red and gray curves correspond to the extracted $v_{2,2}$ and $v_{3,3}$ signals, respectively. The fit to the signal is shown as a blue band, and the signal-to-fit ratio is shown in the bottom panel. The $\chi^{2}$ divided by the number of degrees of freedom is 0.894.}
 	\label{fig:flowext}
 \end{figure}
 
@@ -129,8 +129,8 @@ It can be seen that while PYTHIA
 
 \begin{figure}[h!]
 	\centering
-	\hspace{-3em}\includegraphics[width=0.6\textwidth]{figures/Fig5_Plot_v2Mult.pdf} 
-	\caption{The $Y^{\rm{frag}}$ for the near- and away-side as a function of multiplicity percentiles with both ALICE and PYTHIA data. The ratio includes the combined statistical and systematic errors in quadrature. ALICE data points are shown as circle and square markers, whereas PYTHIA is shown as lines. The near-side yields are shown in black, and the away-side yields in blue.}
+	\hspace{-3em}\includegraphics[width=0.6\textwidth]{figures/FIG3_Plot_v2Mult.pdf} 
+	\caption{The $Y_{\rm{frag}}$ for the near- and away-side as a function of multiplicity percentiles with both ALICE and PYTHIA data. The ratio includes the combined statistical and systematic errors in quadrature. ALICE data points are shown as circle and square markers, whereas PYTHIA is shown as lines. The near-side yields are shown in black, and the away-side yields in blue.}
 	\label{fig:Ymult}
 \end{figure}
 
