--- a/sec_results.tex
+++ b/sec_results.tex
@@ -6,7 +6,7 @@
 
 \begin{figure}[h!]
 	\centering
-	\hspace{-3em}\includegraphics[width=0.9\textwidth]{figures/Fig2_vn_pppPb.pdf} %<--- keep the scale at 0.9 to match with other figures
+	\hspace{-3em}\includegraphics[width=0.9\textwidth]{figures/FIG4_vn_pppPb.pdf} %<--- keep the scale at 0.9 to match with other figures
 	\caption{The magnitude of $v_2$ (left) and $v_3$ (right) as a function of $p_\mathrm{T}$ for the high multiplicity percentile of the 0--0.1\% in pp collisions at $\sqrt{s}=13$~TeV and 0--20\% in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV.}
 	\label{fig:vn}
 \end{figure}
@@ -20,7 +20,7 @@ These results are comparable to those obtained by ATLAS in different multiplicit
 \begin{figure}[h!]
 	\centering
 %python3 Fig6_vn_allSystems_comp_dataonly.py
-\includegraphics[width=1.0\textwidth]{figures/Fig6_v2Mult_allSystems_Data.pdf} 
+\includegraphics[width=1.0\textwidth]{figures/FIG5_v2Mult_allSystems_Data.pdf} 
 	\caption{The $v_2$ magnitude for two different collision systems, pp and p--Pb as a function of charged-particle multiplicity at mid-rapidity. For pp collisions, two different $p_\mathrm{T}$-intervals are shown, $1.0<p_\mathrm{T}<2.0$ GeV/c and $1.0<p_\mathrm{T}<4.0$ GeV/$c$.} 
 	\label{fig:v2mult}
 \end{figure}
@@ -35,7 +35,7 @@ This agrees with what is observed in Fig.~\ref{fig:vn}, where the $v_2$ magnitud
 \subsection{Event-scale dependence of the flow coefficients}
 \begin{figure}[h!]
 	\centering
-	\hspace{-3em}\includegraphics[width=0.8\textwidth]{figures/Fig4_vn_LP.pdf}
+	\hspace{-3em}\includegraphics[width=0.8\textwidth]{figures/FIG6_vn_LP.pdf}
 	\caption{The magnitude of $v_2$ (top) and $v_3$ (bottom) as a function of the $\it{p}^{\rm{LP}}_{\rm{T,min}}$ (left) and $\it{p}^{\rm{jet}}_{\rm{T,min}}$ (right) for the high-V0M-multiplicity percentile of the 0--0.1\% in $\sqrt{s}=13$ pp collisions. The measured $p_{\mathrm{T}}$ intervals are $1<p_{\mathrm{T}}<2\,\mathrm{GeV}/c$ (in red) and $1<p_{\mathrm{T}}<4\,\mathrm{GeV}/c$ (in black). The statistical and systematic uncertainties are shown as vertical bars and boxes, respectively.}
 	\label{fig:LPjet23}
 \end{figure}    
@@ -53,7 +53,7 @@ However, the measurements are only limited with low $\it{p}^{\rm{jet}}_{\rm{T}}$
 
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=1.0\textwidth]{figures/Fig6_v2Mult_allSystems_Hydro.pdf} 
+	\includegraphics[width=1.0\textwidth]{figures/FIG7_v2Mult_allSystems_Hydro.pdf} 
 	\caption{The measured and calculated evolution of $v_2$ (left) and $v_3$ (right) in pp and p--Pb collisions as a function of charged-particle multiplicity at mid-rapidity. The calculations are provided by hydrodynamical models. Measured data are represented by markers and the calculations by bands.
     The blue and red markers represent the p--Pb and pp collision data points, respectively. The hydrodynamic calculations are presented with colored lines and bands marking their statistical uncertainty.} 
 	\label{fig:vnmult_model}
